codsoft_task2 (MyPortfolio)/style.css
 /* 

Author : Mohit Jangid
Follow me on linkedin for more like this...
linkedin : https://www.linkedin.com/in/mohit487/

*/
 

/* *********** GENERAL STYLING ********** */
*{  
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Fariables for same styling */
:root{
    /* variables for font styling */
    --font-poppins: 'Poppins', sans-serif;
    --font-open-sans: 'Open Sans', sans-serif;
    --font-nato-sans: 'Noto Sans', sans-serif;


    /* heading font size  */
    --bigest-title-heading:72px;
    --big-size-heading:46px;
    --medium-size-heading:36px;
    --small-size-heading:24px;

    /* para font size */
    --big-size-para:24px;
    --medium-size-para:20px;
    --small-size-para:16px;
    --extra-small-size-para:12px;
    
    /* variable for bg-color and color */
    --bg-color-success-rgb: rgb(0, 255, 26);
    --bg-color-white-rgb:rgb(255,255,255);
    --bg-color-black-rgb: rgb(0, 0, 0);
    --bg-color-black-light: rgba(0, 0, 0,0.85);
    --bg-color-gray-rgb: rgb(174, 174, 174);

    
    --color-black-rgb: rgb(0, 0, 0);
    --color-white-rgb:rgb(255, 255, 255);
    --color-gray-rgb:rgb(180, 180, 180);
    --color-success-rgb:rgb(5, 221, 27);
}

html{
    scroll-behavior: smooth;
    scroll-padding-top: calc(8vh + 44px);
    background-color: rgba(0, 0, 0, 0.4);
    color: white;
}

/*     *****Header Styling starts*****      */
.header { 
    height: 10vh;
    width:100vw ;
    padding: 2rem 4rem;
    display: flex;  
    justify-content: space-between;
    align-items: center;   
    position: fixed;
    top: 0px;
    z-index: 1; 
    background-color: var(--bg-color-black-light);
    transition: 0.4s;
}

/* Logo styling  */
.logo-txt{
    font-family: var(--font-poppins);
    font-size: var(--small-size-heading);
    font-weight: 600;
    letter-spacing:1px;
    color:var(--color-white-rgb);
    cursor: pointer;
}

/* Nav Links styling */
header nav{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    position: relative;

}

/* Hamburger Menu for mobile devices */
.hamburger-menu-container{
    position: relative;
    z-index: 1;
    cursor: pointer;
    display: none;
}

.hamburger-menu-container > .hamburger-menu-lines{
    height: 5px;
    width: 35px;
    border-radius: 4px;
    background-color: var(--bg-color-white-rgb);
    transition: 0.5s;
    margin-top: 5px;
}
/* Hamburger Menu tansition  */
.hamburger-menu-container.active > .line1{
    transform: translateY(10px) rotate(45deg) ;
}

.hamburger-menu-container.active > .line2{
    opacity: 0;
}
.hamburger-menu-container.active > .line3{
    transform: translateY(-10px) rotate(135deg);
}

/* Nav links styling  */
.nav-links{
    list-style-type: none;
    display: flex;
    transition: 0.5s;
 
}

/* Li styling  */
.nav-link-menus{
    position: relative;
    margin-right: 1.5rem;
    transition: 0.5s;
}

/* after green line on hover effect styling */
.nav-link-menus::after{
    content: '';
    position: absolute;
    bottom:0px ;
    left: 0px;
    height: 2px;
    width: 100%;
    background-color:  var(--bg-color-success-rgb);
    transform: scaleX(0);
    transform-origin:left ;
    transition: transform 0.4s ;
}

.nav-link-menus:is(:hover, :active)::after{
    transform: scaleX(1);

}

/* nav links text styling */
.nav-link-menus > a{ 
    display: block;
    line-height: 38px;
    text-decoration: none;
    font-size: var(--small-size-para);
    font-family: var(--font-poppins);
    font-weight:500;
    color: var(--color-gray-rgb);
}

.nav-link-menus > a:hover, a.active{
    color:var(--color-white-rgb) ;
 }


 /* Hero Section styling start */
.hero-section{
    height: 100vh;
    width: 100vw;
    position: relative;
    background:  url(./Assets/hero-bg.png);
    background-size: cover;
    background-repeat: no-repeat; 
    background-attachment: fixed;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

}

.hero-section > .title{
    font-family: var(--font-poppins);
    font-size: var(--bigest-title-heading);
    font-weight: 600;
    color: var(--color-white-rgb);
    margin-top: 6rem;
}

/* dynamic text styling */
.dynamic-text-container {
    display: flex;
    justify-content: center;
    align-items: center;
}
.dynamic-text-container > .mulit-text-container{
    list-style-type: none;
    max-height: 48px;
    max-width: 380px;
    padding: 0px 4px;
    overflow: hidden;
    border-right: 3px solid var(--color-success-rgb);
    animation: cursor-blinking 0.18s linear infinite alternate;
}

@keyframes cursor-blinking {
    0%{
        border-color: var(--color-success-rgb);
    }
    100%{
        border-color: transparent;
    }
}

.mulit-text-container > .changing-text{
    float: right;
    position: relative;
    white-space: nowrap;
    padding: 0px 10px;
    font-family: var(--font-poppins);
    font-size: var(--medium-size-heading);
    letter-spacing: 1px ;
    line-height: 48px;
    font-weight: 600;
    color: var(--color-white-rgb);
    animation: text-moving-up 18s steps(3) infinite, text-hiding 3s steps(28) infinite alternate;

}

@keyframes text-hiding {
    0%{
       transform: translateX(100%);
    }
    100% {
        transform: translateX(0%);
    }
 }

@keyframes text-moving-up {
    0%{
        top:0px;
    }
    100% {
        top: -145px;
    }
 }

 /* social links on hero section styling */
 .social-links{
    position: absolute;
    bottom: 10px;
    right: 10px;
    display: flex;
    gap: 15px;
}

.social-links> a {
    display: inline-block;
    height: 40px;
    width: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.4);
    border-radius: 
    50%;
    transition: 0.3s; 
}

.social-links> a:hover {
 background-color: var(--color-success-rgb);
}

.social-links> a  > span{
    color: var(--color-white-rgb);
    font-size: var(--big-size-para);
}
/* ... */

